# ComfyUI-RAVE_ATTN

./: README.md  __init__.py  pyproject.toml
example_workflows/: rave_example.json  rave_with_unsampler.json
nodes/: apply_rave_attention_node.py  override_attention_sd15_node.py  override_attention_sdxl_node.py
utils/: rave_attention.py  rave_utils.py
